# defensive_programming_v2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_SOCIAL.md  STUDENT_GUIDE.md  __init__.py  autograder.py  autograder_result.json  instructor_notes.md  pyproject.toml  requirements.txt  rubric.md  setup.cfg  setup_env.sh  setup_student.sh  syllabus.md
.github/workflows/: autograder.yml  pytest.yml
examples/: __init__.py  contracts.py  decorators.py  operations.py  sentinel_examples.py
grading/hidden_tests/: test_hidden_00_intro.py  test_hidden_01_guarded_divide.py  test_hidden_02_sentinels.py  test_hidden_03_contracts.py  test_hidden_04_decorators.py
topics/: README.md  __init__.py  run_partA_tests.py
topics/00-intro/: README.md  assignment.md  skeleton.py  starter.py  test_template_for_students_00_intro.py
topics/00-intro/instructor_tests/: test_partA_00_intro.py
topics/01-guard-clauses/: README.md  assignment.md  example_operations.py  skeleton.py  solution_operations.py  starter.py  test_operations_defensive.py  test_template_for_students.py
topics/01-guard-clauses/instructor_tests/: test_partA_01_guarded_divide.py
topics/02-sentinels/: README.md  assignment.md  example_sentinel_examples.py  skeleton.py  starter.py  test_sentinel.py  test_template_for_students_02_sentinels.py
topics/02-sentinels/instructor_tests/: test_partA_02_sentinels.py
topics/03-design-by-contract/: README.md  assignment.md  example_contracts.py  skeleton.py  starter.py  test_contracts.py  test_template_for_students_03_contracts.py
topics/03-design-by-contract/instructor_tests/: test_partA_03_contracts.py
topics/04-decorators/: README.md  assignment.md  example_decorators.py  skeleton.py  starter.py  test_decorators.py  test_template_for_students_04_decorators.py
topics/04-decorators/instructor_tests/: test_partA_04_decorators.py
